force-app/main/default/objects/DEVICE_MST__x/DEVICE_MST__x.object-meta.xml
<CustomObject>
    <description>DEVICE_MST</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>DEVICE_MST</externalName>
    <label>機器マスタ</label>
</CustomObject>