force-app/main/default/objects/DEVICE_MST__x/fields/device_mst_id__c.field-meta.xml
<CustomField>
    <fullName>device_mst_id__c</fullName>
    <description>device_mst_id</description>
    <externalDeveloperName>device_mst_id</externalDeveloperName>
    <label>device_mst_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>