force-app/main/default/objects/DEVICE_MST__x/fields/origin__c.field-meta.xml
<CustomField>
    <fullName>origin__c</fullName>
    <description>origin</description>
    <externalDeveloperName>origin</externalDeveloperName>
    <label>origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>