force-app/main/default/objects/DEVICE_MST__x/fields/product_category__c.field-meta.xml
<CustomField>
    <fullName>product_category__c</fullName>
    <description>product_category</description>
    <externalDeveloperName>product_category</externalDeveloperName>
    <label>product_category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>