force-app/main/default/objects/DEVICE_MST__x/fields/shipping_time__c.field-meta.xml
<CustomField>
    <fullName>shipping_time__c</fullName>
    <description>shipping_time</description>
    <externalDeveloperName>shipping_time</externalDeveloperName>
    <label>shipping_time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>